Changelog
=========

2.1.9 - unreleased
------------------


2.1.8 - 2011-07-04
------------------

- Show 'Manage portlets' fallback viewlet for all ILocalPortletAssignables, not
  just ATContentTypes items. This fixes
  http://code.google.com/p/dexterity/issues/detail?id=183
  [davisagli]

2.1.7 - 2011-06-30
------------------

- Footer viewlet have all viewlet base API (site_url, navigation_root_url, etc).
  [thomasdesvenain]

- Make the bodyClass play more nice with ZopeViewPageTemplateFile.
  This fixes https://dev.plone.org/plone/ticket/11825
  [WouterVH]


2.1.6 - 2011-06-02
------------------

 - Use getPhysicalPath instead of absolute_url_path to handle correctly
   virtual hosting.
   This fixes http://dev.plone.org/plone/ticket/8787
   [encolpe]


2.1.5 - 2011-05-12
------------------

- Page title and logo image title are related to navigation root.
  Refs http://dev.plone.org/plone/ticket/9175.
  Added navigation_root_title to portal_state view.
  [thomasdesvenain]

- Fix missing workflow history entry for content creation. Closes #11305.
  [rossp]

- Respect typesUseViewActionInListings in sitemap.xml.
  [elro]

- Use the parent url for default pages in sitemap.xml.
  [elro]

- Exclude types_not_searched from sitemap.xml.
  This fixes http://dev.plone.org/plone/ticket/7145
  [elro]

- Reduce whitespace in sitemap.xml.
  [elro]

- sitemap.xml.gz support for INavigationRoot.
  [elro]

- Add MANIFEST.in.
  [WouterVH]

- Make ``getNavigationRoot`` behave correctly in ``INavigationRoot``-folders
  where a ``relativeRoot`` is specified.
  This fixes https://dev.plone.org/plone/ticket/8787
  [WouterVH]


2.1.4 - 2011-04-03
------------------

- Make the body `section-` class based on the navigation root instead of the
  site root.
  [elro]

- Added navigation_root to plone_portal_state.
  [elro]


2.1.3 - 2011-03-02
------------------

- Fixed i18n of the "Log in to add comments" button. It was a regression